modulo medico terminado, filter pipe en buscadores y arreglos extras

--- a/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.css
+++ b/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.css
@@ -1,17 +1,55 @@
-img{
+.background {
+  background: url("../../../assets/img/img_bienv.jpg") no-repeat center center
+    fixed;
+  background-color: #009788;
+  object-fit: cover;
+  padding: 2rem 0px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.botones {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+/* img{
     width: inherit;
     position: absolute;
     z-index: -100;
+} */
+
+.boton-container {
+  position: absolute;
+  bottom: 2rem;
 }
 
-.btn{
-    font-weight: 500;
+.btn .rounded-pill {
+  font-weight: 500;
 }
 
-.btn:last-child{
-    background-color: aliceblue;    
+.btn:last-child {
+  background-color: aliceblue;
 }
 
-.btn:hover{
-    background-color: blueviolet;
+.btn:hover {
+  background-color: blueviolet;
+}
+
+@media (min-width: 300px) and (max-width: 768px) {
+  .background {
+    background-color: #009788;
+    object-fit: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
