--- a/frontend/agendapp/src/app/components/especialidad.detalle/especialidad.detalle.component.css
+++ b/frontend/agendapp/src/app/components/especialidad.detalle/especialidad.detalle.component.css
@@ -75,3 +75,11 @@ img {
 .card-container {
   padding-bottom: 5rem;
 }
+
+.fraseBienvenida > p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  margin-top: 1rem;
+}
