--- a/frontend/agendapp/src/app/components/turnodetalle/turnodetalle.component.html
+++ b/frontend/agendapp/src/app/components/turnodetalle/turnodetalle.component.html
@@ -14,50 +14,69 @@
 </section>
 
 <div class="main">
-  @if(turno){
-  <div class="card">
-    <div class="card-body">
-      <!-- Detalles del turno -->
-      <div class="wrapper">
-        @if(usuario){
-        <p class="me-2 fw-bold">Paciente</p>
-        <p>{{ usuario.nombre }}&#8194;{{usuario.apellido}}</p>
-        }
-      </div>
-      <div class="wrapper">
-        <p class="card-text fw-bold me-2">ID Cita:</p>
-        <p>{{turno.idCita}}</p>
-      </div>
-      <div class="wrapper">
-        <p class="card-text fw-bold me-2">Especialista:</p>
-        <p>{{ turno.idMedico }}</p>
-      </div>
-      <div class="wrapper">
-        <p class="card-text fw-bold me-2">Fecha:</p>
-        <p>{{ turno.fecha }}</p>
-      </div>
-      <div class="wrapper">
-        <p class="card-text fw-bold me-2">Hora:</p>
-        <p>{{ turno.hora }}</p>
-      </div>
-      <div class="d-flex flex-row text-wrap justify-content-start align-items-start">
-        <p class="card-text fw-bold me-2">Motivo de consulta:</p>
-        <p>{{ turno.motivo }}</p>
-      </div>
-      <div class="wrapper">
+  <div
+    class="container d-flex flex-column justify-content-center align-items-center"
+  >
+    @if(turno){
+    <div class="card">
+      <div class="card-body">
+        <!-- Detalles del turno -->
+        <div class="wrapper">
+          @if(usuario){
+          <p class="me-2 fw-bold">Paciente</p>
+          <p>
+            {{ usuario.nombre | titlecase }}&#8194;{{
+              usuario.apellido | titlecase
+            }}
+          </p>
+          }
+        </div>
+        <div class="wrapper">
+          <p class="card-text fw-bold me-2">ID Cita:</p>
+          <p>{{ turno.idCita }}</p>
+        </div>
+        <div class="wrapper">
+          <p class="card-text fw-bold me-2">Especialista:</p>
+          <p>
+            {{ usuarioMedico?.nombre | titlecase }}&ensp;{{
+              usuarioMedico?.apellido | titlecase
+            }}
+          </p>
+        </div>
+        <div class="wrapper">
+          <p class="card-text fw-bold me-2">Fecha:</p>
+          <p>{{ turno.fecha | date : "dd/MM/yy" }}</p>
+        </div>
+        <div class="wrapper">
+          <p class="card-text fw-bold me-2">Rango de Horario:</p>
+          <p>{{ rangoHoraId }}</p>
+        </div>
+        <div class="wrapper">
+          <p class="card-text fw-bold me-2">Hora Seleccionada:</p>
+          <p>{{ turno.horaCita }}:00</p>
+        </div>
+        <div
+          class="d-flex flex-row text-wrap justify-content-start align-items-start"
+        >
+          <p class="card-text fw-bold me-2">Motivo de consulta:</p>
+          <p>{{ turno.motivoConsulta }}</p>
+        </div>
+        <!-- <div class="wrapper">
         @if(turno?.descripcion){
         <p class="card-text fw-bold me-2">Descripcion:</p>
         }@else{
         <p></p>     
         }
-      </div>         
+      </div>          -->
+      </div>
     </div>
-  </div>
-  }
-
-
-  <div class="bg-warning politica text-center">
-    <small>Política de pre-cancelación de turnos<br/>Si desea cancelar su turno, debe hacerlo con 24hs de anticipación. </small>
+    }
+    <div class="bg-warning politica">
+      <small class="text-center">
+        Política de pre-cancelación de turnos. Si desea cancelar su turno,
+        debe hacerlo con 24hs de anticipación.
+      </small>
+    </div>
   </div>
 </div>
 
