--- a/frontend/agendapp/src/app/shared/navbar/navbar.component.html
+++ b/frontend/agendapp/src/app/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 @if(section){
 <section>
   <nav
-    class="navbar navbar-expand-lg d-flex justify-content-start align-items-center py-4 pt-5"
+    class="navbar d-flex justify-content-start align-items-center py-4 pt-5"
     [ngClass]="{
       'navbar-registro-usuario': section === 'registro_usuarios',
       'navbar-registro-medico': section === 'registro_medicos',
