--- a/frontend/agendapp/src/app/components/listaturnos/listaturnos.component.css
+++ b/frontend/agendapp/src/app/components/listaturnos/listaturnos.component.css
@@ -1,8 +1,3 @@
-.card-touch {
-  z-index: 1;
-  width: 18rem;
-  height: 7rem;
-}
 
 .main {
   display: flex;
@@ -12,14 +7,9 @@
   margin: 2rem 0px;
 }
 
-.turno-container{
-  margin-bottom: 5rem;
-}
-
 .container-fluid {
   background-color: #d2ebfa;
 }
-
 
 .caret {
   width: 1.2rem;
@@ -29,7 +19,43 @@ h3 {
   font-weight: 700;
 }
 
-.border-pill{
-    margin-bottom: 2rem;
+span.rango{
+  font-size: 0.7em;
 }
 
+.btn-container{
+  width: 80dvw;
+}
+
+.rounded-pill {
+  margin-bottom: 2rem;
+  width: 6rem;
+}
+
+#card-turnos {
+  padding-bottom: 5rem;
+  width: 100%;
+}
+
+.card {
+  border-radius: 18px;
+  cursor: pointer;
+}
+
+.card:hover {
+  background-color: #3332;
+}
+
+
+.card-vacia {
+  height: 6rem;
+  font-weight: 700;
+}
+
+h5 {
+  font-weight: 900;
+}
+
+small {
+  font-weight: 700;
+}
