--- a/frontend/agendapp/src/app/components/listaturnos/listaturnos.component.html
+++ b/frontend/agendapp/src/app/components/listaturnos/listaturnos.component.html
@@ -15,62 +15,79 @@
   </div>
 </section>
 
+<!-- Botones estado de turnos 'proximos' y 'cancelados' -->
 <div class="main">
-  <!-- Botones estado de turnos 'proximos' y 'cancelados' -->
-  <div
-    class="container d-flex flex-row justify-content-end align-items-center border-pill gap-2"
-  >
-    <button
-      type="button"
-      class="btn btn-outline-dark rounded-pill text-bg-success btn-sm"
+    <div
+      class="container-fluid border-pill gap-2 d-flex justify-content-end align-items-end btn-container"
     >
-      Proximos
-    </button>
-    <button
-      type="button"
-      class="btn btn-outline-dark rounded-pill text-bg-light btn-sm"
-    >
-      Cancelados
-    </button>
-  </div>
+      <button
+        type="button"
+        class="btn btn-outline-dark rounded-pill text-bg-success btn-sm"
+      >
+        Proximos
+      </button>
+      <button
+        type="button"
+        class="btn btn-outline-dark rounded-pill text-bg-light btn-sm"
+      >
+        Cancelados
+      </button>
+    </div>
 
   <!-- Card de cada turno -->
-  <div class="container turno-container">
-    @for(cita of citas; track $index){     
-    <div class="card mb-3" (click)="verCita($index)">          
-      <div class="row g-0">
-        <div class="col-3 d-flex justify-content-center align-items-center">
-          <img
-            src="../../../assets/img/logo.png"
-            class="img-fluid rounded-start doctor"
-            alt="imagen_doctor"
-          />
-        </div>
-        <div class="col-8">
-          <div
-            class="card-body p-2 m-0 d-flex flex-column justify-content-center align-items-center"
-          >
-            <!-- Nombre completo y especialidad -->
-
-            <h6 class="card-title">Obstetra</h6>
-            <h5>Dr. Sandra Chirino</h5>
-            <small> {{ cita.fecha }} - {{ cita.hora }} </small>
-            <small>
-              {{ cita.motivo }}
-            </small>
-          </div>
-        </div>
-        <div class="col-1">
-          <!-- Eliminar turno -->
-          <span class="badge rounded-pill text-bg-light">x</span>
+  <section id="card-turnos">
+    <div class="container">
+      @switch (citas.length === 0){ @case (true) {
+      <div class="card mb-3 card-vacia">
+        <div
+          class="card-body p-2 m-0 d-flex flex-column justify-content-center align-items-center"
+        >
+          <span>No tienes turnos</span>
         </div>
       </div>
+      } @default{ @for(cita of citas; track cita.idCita){
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-3 d-flex justify-content-center align-items-center">
+            <img
+              src="../../../assets/img/logo.png"
+              class="img-fluid rounded-start doctor"
+              alt="imagen_doctor"
+            />
+          </div>
+          <div class="col-8">
+            <div
+              class="card-body p-2 m-0 d-flex flex-column justify-content-center align-items-center"
+            >
+              <!-- Nombre completo y especialidad -->
+              <h6 class="card-title">{{ "Especialidad" }}</h6>
+              <h5>Dr. {{ "Nombre" }}{{ "Apellido" }}</h5>
+              <small>
+                {{ cita.fecha | date : "dd/MM/yy" }} - {{ citaHora }}&ensp;Hs.
+              </small>
+              <small>
+                {{ cita.motivoConsulta }}
+              </small>
+            </div>
+          </div>
+          <div class="col-1 d-flex align-items-center pe-2">
+            <button
+              type="button"
+              title="Ver turno"
+              class="btn btn-outline-terciary btn-lg p-0 m-0"
+              (click)="verTurnoDetalle(cita.idCita)"
+            >
+              👁
+            </button>
+          </div>
+        </div>
+      </div>
+      }}}
     </div>
-    }
-  </div>
-
-  <!-- Footer generico -->
-  <section id="nav-footer">
-    <app-footer class="fixed-bottom"></app-footer>
   </section>
 </div>
+
+<!-- Footer generico -->
+<section id="nav-footer">
+  <app-footer class="fixed-bottom"></app-footer>
+</section>
