--- a/frontend/agendapp/src/app/shared/footer/footer.component.html
+++ b/frontend/agendapp/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
   @if(section){
   <nav
-    class="navbar navbar-expand-lg d-flex py-3 position-sticky"
+    class="navbar d-flex py-3 position-sticky"
   >
     @if(section === 'home_usuario' || section === 'mis_turnos' || section === 'especialidades' || section === 'turno' ){ 
       <ul class="d-flex flex-row justify-content-around align-items-center">
@@ -41,10 +41,10 @@
         </a>
       </li>
     </ul>
-    } @else if(section === 'home_medicos'){
+    } @else if(section === 'home_medico' || section === 'buscar' || section === 'inbox'){
       <ul class="d-flex flex-row justify-content-around align-items-center">
       <li>
-        <a [routerLink]="['/home_medicos']" class="border">
+        <a [routerLink]="['/home_medico']" class="border">
           <img
             src="../../../assets/img/home.svg"
             alt=""
@@ -53,7 +53,7 @@
         </a>
       </li>
       <li>
-        <a [routerLink]="['/buscar_usuario']" class="border">
+        <a [routerLink]="['/buscar']" class="border">
           <img
             src="../../../assets/img/list-solid.svg"
             alt=""
