--- a/frontend/agendapp/src/app/shared/navbarusuariologueado/navbarusuariologueado.component.html
+++ b/frontend/agendapp/src/app/shared/navbarusuariologueado/navbarusuariologueado.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg d-flex justify-content-start align-items-center"
+  class="navbar d-flex justify-content-start align-items-center"
 >
   <div class="container-fluid">
     <!-- Logo redirige a Inicio -->
@@ -19,7 +19,7 @@
       <p class="nombreUsuario p-0 m-0">{{ usuario.nombre}} {{usuario.apellido}}</p>
       }
       <button
-        class="navbar-toggler border-0 ps-1"
+        class="navbar-toggler border-0 rounded-circle p-0 ps-1"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#navbarText"
