solucione un problema con el componente login de ambos usuarios (no inlcuye admin)

--- a/frontend/agendapp/src/app/components/login/login.component.html
+++ b/frontend/agendapp/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
 <div
   class="container d-flex flex-column justify-content-center align-items-center mt-2"
 >
-  <form #form="ngForm" (ngSubmit)="submit(form)">
+  <form #form="ngForm" (ngSubmit)="loginUsuario(form)">
     <div class="card bg-transparent border-0">
       <div class="card-body m-0 p-0">
         <div class="wrapper mb-2">
@@ -76,7 +76,7 @@
 <div
   class="container d-flex flex-column justify-content-center align-items-center mt-2"
 >
-  <form #form="ngForm" (ngSubmit)="submit(form)">
+  <form #form="ngForm" (ngSubmit)="loginMedicos(form)">
     <div class="card bg-transparent border-0">
       <div class="card-body m-0 p-0">
         <div class="wrapper mb-2">
