(rama-modulo-admin), agregue videollamada y maquetado parcial

--- a/frontend/agendapp/src/app/shared/footer/footer.component.html
+++ b/frontend/agendapp/src/app/shared/footer/footer.component.html
@@ -81,7 +81,7 @@
       </li>
     </ul>
      }
-    @else if(section === 'dashboard'){
+    @else if(section === 'admin' || section === 'buscar' || section === 'inbox' || section === 'videollamada'){
     <ul class="d-flex flex-row justify-content-around align-items-center">
       <li>
         <a [routerLink]="['/dashboard']" class="border">
