--- a/frontend/agendapp/src/app/shared/footer/footer.component.html
+++ b/frontend/agendapp/src/app/shared/footer/footer.component.html
@@ -1,125 +1,121 @@
-  @if(section){
-  <nav
-    class="navbar d-flex py-3 position-sticky"
-  >
-    @if(section === 'home_usuario' || section === 'mis_turnos' || section === 'especialidades' || section === 'turno' ){ 
-      <ul class="d-flex flex-row justify-content-around align-items-center">
-      <li>
-        <a [routerLink]="['/home_usuario']" class="border">
-          <img
-            src="../../../assets/img/home.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/mis_turnos']" class="border">
-          <img
-            src="../../../assets/img/calendar.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/especialidades']" class="border">
-          <img
-            src="../../../assets/img/specialties.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/']" class="border">
-          <img
-            src="../../../assets/img/logout.svg"
-            alt="icono_salir"
-            title="Salir"            
-          />
-        </a>
-      </li>
-    </ul>
-    } @else if(section === 'home_medico' || section === 'buscar' || section === 'inbox'){
-      <ul class="d-flex flex-row justify-content-around align-items-center">
-      <li>
-        <a [routerLink]="['/home_medico']" class="border">
-          <img
-            src="../../../assets/img/home.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/buscar']" class="border">
-          <img
-            src="../../../assets/img/list-solid.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/inbox']" class="border">
-          <img
-            src="../../../assets/img/inbox.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/']" class="border">
-          <img
-            src="../../../assets/img/logout.svg"
-            alt="icono_salir"
-            title="Salir"            
-          />
-        </a>
-      </li>
-    </ul>
-     }
-    @else if(section === 'admin' || section === 'buscar' || section === 'inbox' || section === 'videollamada'){
-    <ul class="d-flex flex-row justify-content-around align-items-center">
-      <li>
-        <a [routerLink]="['/dashboard']" class="border">
-          <img
-            src="../../../assets/img/home.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li> 
-      <li>
-        <a [routerLink]="['/buscar']" class="border">
-          <img
-            src="../../../assets/img/search-folder.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/inbox']" class="border">
-          <img
-            src="../../../assets/img/inbox.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/']" class="border">
-          <img
-            src="../../../assets/img/logout.svg"
-            alt="icono_salir"
-            title="Salir"            
-          />
-        </a>
-      </li>
-    </ul>
-    }
-  </nav>
+@if(section){
+<nav class="navbar d-flex py-3 position-sticky">
+  @if(section === 'home_usuario' || section === 'mis_turnos' || section ===
+  'especialidades' || section === 'turno' ){
+  <ul class="d-flex flex-row justify-content-around align-items-center">
+    <li>
+      <a [routerLink]="['/home_usuario']" class="border">
+        <img src="../../../assets/img/home.svg" alt="" class="border m-0 p-0" />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/mis_turnos']" class="border">
+        <img
+          src="../../../assets/img/calendar.svg"
+          alt=""
+          class="border m-0 p-0"
+        />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/especialidades']" class="border">
+        <img
+          src="../../../assets/img/specialties.svg"
+          alt=""
+          class="border m-0 p-0"
+        />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/']" class="border">
+        <img
+          src="../../../assets/img/logout.svg"
+          alt="icono_salir"
+          title="Salir"
+        />
+      </a>
+    </li>
+  </ul>
+  } @else if(section === 'home_medico' || section === 'buscar' || section === 'inbox' || section === 'videollamada'){
+  <ul class="d-flex flex-row justify-content-around align-items-center">
+    <li>
+      <a [routerLink]="['/home_medico']" class="border">
+        <img src="../../../assets/img/home.svg" alt="" class="border m-0 p-0" />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/buscar']" class="border">
+        <img
+          src="../../../assets/img/list-solid.svg"
+          alt=""
+          class="border m-0 p-0"
+        />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/inbox']" class="border">
+        <img
+          src="../../../assets/img/inbox.svg"
+          alt=""
+          class="border m-0 p-0"
+        />
+      </a>
+    </li>
+     <li>
+      <a [routerLink]="['/videollamada']" class="border">
+        <img
+          src="../../../assets/img/videocallON.svg"
+          alt="icono_videollamada"
+          title="Videollamada"
+        />
+      </a>
+    </li>
+    <!-- <li>
+      <a [routerLink]="['/']" class="border">
+        <img
+          src="../../../assets/img/logout.svg"
+          alt="icono_salir"
+          title="Salir"
+        />
+      </a>
+    </li> -->
+  </ul>
+  } @else if(section === 'admin' || section === 'buscar' || section ===
+  'inbox'){
+  <ul class="d-flex flex-row justify-content-around align-items-center">
+    <li>
+      <a [routerLink]="['/admin']" class="border">
+        <img src="../../../assets/img/home.svg" alt="" class="border m-0 p-0" />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/buscar']" class="border">
+        <img
+          src="../../../assets/img/search-folder.svg"
+          alt=""
+          class="border m-0 p-0"
+        />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/inbox']" class="border">
+        <img
+          src="../../../assets/img/inbox.svg"
+          alt=""
+          class="border m-0 p-0"
+        />
+      </a>
+    </li>
+    <li>
+      <a [routerLink]="['/']" class="border">
+        <img
+          src="../../../assets/img/logout.svg"
+          alt="icono_salir"
+          title="Salir"
+        />
+      </a>
+    </li>
+  </ul>
+  }
+</nav>
 }
