finalice filter pipe, videollamada, iconos, lazy loading, fusion en login, servicio de la DB, inbox

--- a/frontend/agendapp/src/app/components/ficha-paciente/ficha-paciente.component.html
+++ b/frontend/agendapp/src/app/components/ficha-paciente/ficha-paciente.component.html
@@ -72,7 +72,7 @@
 
 <!-- Footer generico -->
 <section id="nav-footer">
-  <nav class="navbar navbar-expand-lg d-flex py-3 fixed-bottom">
+  <nav class="navbar d-flex flex-row justify-content-around py-3 fixed-bottom">
     <ul class="d-flex flex-row justify-content-around align-items-center">
       <li>
         <a [routerLink]="['/home_medico']" class="border">
