--- a/frontend/agendapp/src/app/components/modulo-medico/modulo-medico.component.css
+++ b/frontend/agendapp/src/app/components/modulo-medico/modulo-medico.component.css
@@ -6,12 +6,11 @@
   padding-bottom: 5rem;
 }
 
-.fraseBienvenida > h2 {
+.fraseBienvenida>h2 {
   display: flex;
   justify-content: start;
   align-items: center;
   font-weight: bold;
-  background-color: #f5f5f5;
   margin-top: 1rem;
 }
 
@@ -35,7 +34,7 @@ span.btn-sm {
 }
 
 .turno-card {
-  width:80dvw;
+  width: 80dvw;
   margin-bottom: 5rem;
 }
 
@@ -100,3 +99,21 @@ img.down-arrow {
 label {
   margin-bottom: 0.7rem;
 }
+
+span.icono-videocall {
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  width: 50px;
+}
+
+span.active {
+  border-color: #198754;
+  background-color: #198754;
+  color: white !important;
+  font-weight: bold;
+}
+
+/* .collapse-container{
+  overflow: hidden;
+} */
