--- a/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.css
+++ b/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.css
@@ -4,7 +4,7 @@
   background-color: #009788;
   object-fit: cover;
   padding: 2rem 0px;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,7 +46,7 @@
   .background {
     background-color: #009788;
     object-fit: cover;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
