--- a/frontend/agendapp/src/app/components/login/login.component.html
+++ b/frontend/agendapp/src/app/components/login/login.component.html
@@ -1,10 +1,10 @@
 @if(vistaHeader){
 <app-navbar></app-navbar>
-} @if(section === 'login_usuarios'){
+}
 <div
   class="container d-flex flex-column justify-content-center align-items-center mt-2"
 >
-  <form #form="ngForm" (ngSubmit)="loginUsuario(form)">
+  <form #form="ngForm" (ngSubmit)="submit(form)">
     <div class="card bg-transparent border-0">
       <div class="card-body m-0 p-0">
         <div class="wrapper mb-2">
@@ -13,10 +13,10 @@
             type="email"
             name="email"
             placeholder="Email"
-            required
-            ngModel
             maxlength="100"
             minlength="8"
+            required
+            ngModel
           />
         </div>
         <div class="wrapper mb-2">
@@ -35,12 +35,14 @@
         <div
           class="d-flex flex-row justify-content-between align-items-center mx-3"
         >
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="recordar">
             <input
               class="form-check-input"
               type="checkbox"
+              role="checkbox"
+              aria-checked="false"
               value=""
-              id="flexCheckDefault"
+              id="recordar"
             />
             Recordame
           </label>
@@ -71,73 +73,3 @@
     </div>
   </form>
 </div>
-
-} @else if(section === 'login_medicos'){
-<div
-  class="container d-flex flex-column justify-content-center align-items-center mt-2"
->
-  <form #form="ngForm" (ngSubmit)="loginMedicos(form)">
-    <div class="card bg-transparent border-0">
-      <div class="card-body m-0 p-0">
-        <div class="wrapper mb-2">
-          <input
-            class="form-control"
-            type="email"
-            name="email"
-            placeholder="Email"
-            maxlength="100"
-            minlength="8"
-            required
-            ngModel
-          />
-        </div>
-        <div class="wrapper mb-2">
-          <input
-            class="form-control"
-            type="password"
-            name="password"
-            placeholder="Contraseña"
-            required
-            ngModel
-            maxlength="100"
-            minlength="8"
-          />
-        </div>
-        <!-- Checkbox para validar sesion -->
-        <div
-          class="d-flex flex-row justify-content-between align-items-center mx-3"
-        >
-          <label class="form-check-label" for="flexCheckDefault">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              [value]="true"
-              id="flexCheckDefault"
-            />
-            Recordame
-          </label>
-          <a href="#">Olvidé mi contraseña</a>
-        </div>
-        <div
-          class="container d-flex flex-column justify-content-center align-items-center"
-        >
-          <div class="d-flex flex-row mt-3">
-            <input
-              class="btn btn-primary btn-lg rounded-pill mb-3 mt-4"
-              type="submit"
-              value="Iniciar Sesión"
-            />
-          </div>
-          <div class="d-flex flex-column">
-            <a
-              class="link-underline-light mt-3"
-              [routerLink]="['/registro_usuarios']"
-              >¿No tenés una cuenta? <span>Registrate</span></a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
-}
