--- a/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.html
+++ b/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.html
@@ -56,7 +56,7 @@
   <section id="btn-calltoaction">
     <div class="container py-3 mt-1">
       <div
-        class="d-flex flex-row justify-content-center align-items-center gap-2"
+        class="d-flex flex-row justify-content-evenly align-items-center gap-2"
       >
         <a
           class="btn btn-primary btn-lg text-wrap cta"
