--- a/frontend/agendapp/src/app/shared/footer/footer.component.html
+++ b/frontend/agendapp/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 @if(section){
-<nav class="navbar d-flex py-3 position-sticky">
+<nav class="navbar d-flex flex-row justify-content-around py-3">
   @if(section === 'home_usuario' || section === 'mis_turnos' || section ===
   'especialidades' || section === 'turno' ){
   <ul class="d-flex flex-row justify-content-around align-items-center">
@@ -12,7 +12,7 @@
       <a [routerLink]="['/mis_turnos']" class="border">
         <img
           src="../../../assets/img/calendar.svg"
-          alt=""
+          alt="icono-listado-de-turnos"
           class="border m-0 p-0"
         />
       </a>
@@ -21,7 +21,7 @@
       <a [routerLink]="['/especialidades']" class="border">
         <img
           src="../../../assets/img/specialties.svg"
-          alt=""
+          alt="icono-especialidades"
           class="border m-0 p-0"
         />
       </a>
@@ -36,7 +36,7 @@
       </a>
     </li>
   </ul>
-  } @else if(section === 'home_medico' || section === 'buscar' || section === 'inbox' || section === 'videollamada'){
+  } @else if(section === 'home_medico' || section === 'buscar' || section === 'inbox'){
   <ul class="d-flex flex-row justify-content-around align-items-center">
     <li>
       <a [routerLink]="['/home_medico']" class="border">
@@ -47,7 +47,7 @@
       <a [routerLink]="['/buscar']" class="border">
         <img
           src="../../../assets/img/list-solid.svg"
-          alt=""
+          alt="icono-buscar-usuarios"
           class="border m-0 p-0"
         />
       </a>
@@ -56,7 +56,7 @@
       <a [routerLink]="['/inbox']" class="border">
         <img
           src="../../../assets/img/inbox.svg"
-          alt=""
+          alt="icono_inbox-de-mensajes-internos"
           class="border m-0 p-0"
         />
       </a>
@@ -64,21 +64,12 @@
      <li>
       <a [routerLink]="['/videollamada']" class="border">
         <img
-          src="../../../assets/img/videocallON.svg"
+          src="../../../assets/img/videocameraON.svg"
           alt="icono_videollamada"
           title="Videollamada"
         />
       </a>
-    </li>
-    <!-- <li>
-      <a [routerLink]="['/']" class="border">
-        <img
-          src="../../../assets/img/logout.svg"
-          alt="icono_salir"
-          title="Salir"
-        />
-      </a>
-    </li> -->
+    </li>     
   </ul>
   } @else if(section === 'admin' || section === 'buscar' || section ===
   'inbox'){
